--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- Animal Recognition Model -->
           <div class="col-md-4">
             <div class="card model-card shadow">
-              <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="Animal Recognition" />
+              <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Pengenal suara Hewan</h5>
                 <p class="card-text">Identifikasi suara hewan berdasarkan suaranya.</p>
@@ -36,44 +36,44 @@
 
           <div class="col-md-4">
             <div class="card model-card shadow">
-              <img src="https://images.unsplash.com/photo-1561409106-fece1abb71cb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="Gesture Recognition" />
+              <img src="/" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Gesture Recognition</h5>
-                <p class="card-text">Recognize hand gestures and translate them into commands.</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Coming Soon</button>
+                <h5 class="card-title">Model 2</h5>
+                <p class="card-text">Deskripsi</p>
+                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
               </div>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="card model-card shadow">
-              <img src="https://images.unsplash.com/photo-1542837336-d14bdf342de6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="Facial Expression" />
+              <img src="/" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Facial Expression Analysis</h5>
-                <p class="card-text">Detect emotions and facial expressions in real-time.</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Coming Soon</button>
+                <h5 class="card-title">Model 3</h5>
+                <p class="card-text">Deskripsi</p>
+                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
               </div>
             </div>
           </div>
 
           <div class="col-md-6">
             <div class="card model-card shadow">
-              <img src="https://images.unsplash.com/photo-1532938911079-1b06ac7ceec7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="Object Detection" />
+              <img src="/" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Object Detection</h5>
-                <p class="card-text">Identify and locate objects within images or video streams.</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Coming Soon</button>
+                <h5 class="card-title">Model 4</h5>
+                <p class="card-text">Deskripsi</p>
+                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
               </div>
             </div>
           </div>
 
           <div class="col-md-6">
             <div class="card model-card shadow">
-              <img src="https://images.unsplash.com/photo-1502951682449-e5b93545d46e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="Plant Recognition" />
+              <img src="/" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Plant Species Identification</h5>
-                <p class="card-text">Identify plant species from images of leaves or flowers.</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Coming Soon</button>
+                <h5 class="card-title">Model 5</h5>
+                <p class="card-text">Deskripsi</p>
+                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
               </div>
             </div>
           </div>
