--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
               <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Pengenal suara Hewan</h5>
-                <p class="card-text">Identifikasi suara hewan berdasarkan suaranya.</p>
+                <p class="card-text">Identifikasi suara jenis hewan berdasarkan suaranya.</p>
                 <a href="animalRecognation/animalRecognation.html" class="btn btn-primary start-btn w-100">Launch Model</a>
               </div>
             </div>
           </div>
 
+          <!-- Instrument Recognition Model -->
           <div class="col-md-4">
             <div class="card model-card shadow">
-              <img src="/" class="card-img-top" />
+              <img src="https://images.unsplash.com/photo-1507838153414-b4b713384a76?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Model 2</h5>
-                <p class="card-text">Deskripsi</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
+                <h5 class="card-title">Pengenal Suara Instrumen</h5>
+                <p class="card-text">Identifikasi jenis instrumen musik berdasarkan suaranya.</p>
+                <a href="instrumentRecognation/instrumentRecognation.html" class="btn btn-primary start-btn w-100">Launch Model</a>
               </div>
             </div>
           </div>
