--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
             </div>
           </div>
 
+          <!-- Semaphore Pose Recognition Model -->
           <div class="col-md-4">
             <div class="card model-card shadow">
-              <img src="/" class="card-img-top" />
+              <img src="https://www.dailysports.id/upload/xlarge/52e7bda92c6930479a634c514e6086f0.jpg" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Model 3</h5>
-                <p class="card-text">Deskripsi</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
+                <h5 class="card-title">Pengenal Pose Semaphore</h5>
+                <p class="card-text">Identifikasi kode semaphore berdasarkan pose tubuh.</p>
+                <a href="semaphoreposeRecognation/semaphoreposeRecognation.html" class="btn btn-primary start-btn w-100">Launch Model</a>
               </div>
             </div>
           </div>
