--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
             </div>
           </div>
 
+          <!-- Squid or Octopus Recognition -->
           <div class="col-md-6">
             <div class="card model-card shadow">
-              <img src="/" class="card-img-top" />
+              <img src="https://images.unsplash.com/photo-1545671913-b89ac1b4ac10?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Model 4</h5>
-                <p class="card-text">Deskripsi</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
+                <h5 class="card-title">Pengenal Squid dan Octopus</h5>
+                <p class="card-text">Identifikasi cumi-cumi dan gurita berdasarkan gambar.</p>
+                <a href="squidoroctopusRecognation/squidoroctopusRecognation.html" class="btn btn-primary start-btn w-100">Launch Model</a>
               </div>
             </div>
           </div>
