--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
           <div class="col-md-6">
             <div class="card model-card shadow">
-              <img src="/" class="card-img-top" />
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7dXNYuQ8r8JRgxdb9nVI_BxhJ3PNZIbbpkg&s" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Model 5</h5>
-                <p class="card-text">Deskripsi</p>
-                <button class="btn btn-secondary start-btn w-100" disabled>Launch Model</button>
+                <h5 class="card-title">Pengenal Gojo dan Sukuna</h5>
+                <p class="card-text">Identifikasi gojo atau sukuna berdasarkan gambar.</p>
+                <a href="gojoorsukunaRecognation/gojoorsukunaRecognation.html" class="btn btn-secondary start-btn w-100">Launch Model</a>
               </div>
             </div>
           </div>
